--- a/public/books.html
+++ b/public/books.html
@@ -104,7 +104,7 @@
 <footer>
   Cade Born Designs, 2019.
 </footer>
-<!-- Got these scripts from video-->
+<!-- Got these scripts from video that was posted for js help in the announcements on Canvas-->
 <script src="js/tablesort.min.js"></script>
 <script>
   new Tablesort(document.getElementById('book_table'));
