--- a/public/user_info.html
+++ b/public/user_info.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Mark's Info</title>
+  <title>User's Info</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/site.css">
 </head>
@@ -17,53 +17,36 @@
     <a class="nav-link" href="books.html">Books</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="user_info.html">Mark's Info</a>
+    <a class="nav-link" href="user_info.html">User's Info</a>
   </li>
 </ul>
-<h1>Mark's Info</h1>
+<h1>User's Info</h1>
 </header>
 <div>
     <!-- I used classes from bootstrap including "rounded" to give my images a slightly better feel.-->
-<center><img src="img/man_in_suit.jpg" width="200px" class="rounded margin_fixer img-thumbnail"></center> <!--I developed the margin_fixer class to improve margins and used img-thumbnail from documentation-->
+ <!--I developed the margin_fixer class to improve margins and used img-thumbnail from documentation-->
 </div>
-<!-- Here I cite the image I am using. -->
-<div>
-<center><small>Citation: Adamovich, O. (2015). Stylish-916502_640. photograph, Seattle, WA. Retrieved from https://pixabay.com/photos/stylish-man-suit-male-business-916502/</small></center>
-</div>
+
 <br />
-<table class="table table-striped"> <!--I used a table format based of off one in the bootstrap documentation -->
-  <thead id="special_header"> <!-- This is a CSS id overload I designed for table headers specifically. -->
-    <tr>
-    <th>Name</th>
-    <th>Country of Origin</th>
-    <th>Birthdate</th>
-    <th>Age</th>
-    <th>Email</th>
-  </tr>
-  </thead>
-  <tr>
-    <td>Mark Stevens</td>
-    <td>United Kingdom</td>
-    <td>07/03/1995</td>
-    <td>24</td>
-    <td><a href="mailto:madeupemail@gmail.com">madeupemail@gmail.com</a></td>
-  </tr>
-</table>
+
 
 <div class="row">
-      <div id="mainContent" class="col-md">Registration form</div>
-      <div id="user_generator_app" class="col-md-4 queueView">
-        <div class="patientWaiting patient"
-        :class="patient.priority + 'Priority'"
-        v-for="user in users">
-          Arrival:<br>
-          <span class="patientName">{{ user.results.name.last }}</span>,
-          <span class="patientName">{{ user.name.first }}</span>
-          <span class="patientName">{{ user.location.state }}</span>
-          <span class="patientName">{{ user.dob.date }}</span>
-          <span class="patientName">{{ user.dob.age }}</span>
-          <span class="patientName">{{ user.email }}</span><br>
+
+      <div id="user_generator_app" class="col">
+        <div class="user_app user">
+          <center><img :src="users.picture.medium"></center>
+          <center>Image taken from randomuser.me</center>
+          User:<br>
+          <div><span>Last Name: {{ users.name.last }}</span></div>
+          <div><span>First Name: {{ users.name.first }}</span></div>
+          <div><span>Home Country: {{ users.nat }}</span></div>
+          <div><span>Date of Birth: {{ users.dob.date }}</span></div>
+          <div><span>Age: {{ users.dob.age }}</span></div>
+          <div><span>Email: {{ users.email }}</span><br></div>
         </div>
+        <!-- Button taken from bootstrap documentation-->
+        <!-- Used VueJS documentation to use a v-on:click that calls the fetch function created last time-->
+        <button class="btn btn-primary" type="submit" v-on:click="fetchUser">Reload Data</button>
       </div>
     </div>
 
